<resources>
    <string name="app_name">IntentIndah</string>
    <string name="move_activity">PINDAH AKTIVITI</string>
    <string name="move_with_data">PINDAH AKTIVITI DENGAN DATA</string>
    <string name="dial_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH AKTIFITI UNTUK RESULT</string>
    <string name="result_from_activity">HASIL DARI AKTIVITI</string>
    <string name="choose_color">PILIH WARNA YANG KAMU SUKA</string>
    <string name="_red">Bela Diri</string>
    <string name="_black">Memanah</string>
    <string name="_green">Bulu Tangkis</string>
    <string name="_yellow">Sepak Bola</string>
    <string name="_white">Berenang</string>
    <string name="_rose">Voli</string>
    <string name="_blue">Basket</string>
    <string name="choose">PILIH</string>
    <string name="data_received">DATA DI TERIMA</string>
    <string name="this_ismove_activity">INI PINDAH AKTIVITI</string>
</resources>