<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoveForResultAktivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PILIH HOBI YANG PALING KAMU SUKAI :) "
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txt_move_activity"/>
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/rg_color">
       <RadioButton
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/rb_red"
           android:text="@string/_red"
           android:layout_marginBottom="@dimen/activity_vertical_margin"
           />
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rb_green"
        android:text="@string/_green"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rb_black"
        android:text="@string/_black"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_yellow"
            android:text="@string/_yellow"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_white"
            android:text="@string/_white"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_rose"
            android:text="@string/_rose"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rb_blue"
            android:text="@string/_blue"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            />
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/btn_choose"/>






</LinearLayout>