<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#4A9586"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="WELCOME TO ANDROID STUDIO BY INDAH "
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="16dp"
        android:gravity="center_horizontal"
        android:textColor="#fff"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/txt_move_activity"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_activity"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/btn_move_activity" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/move_with_data"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_below="@id/btn_move_activity"
        android:id="@+id/btn_move_with_data"/>
     <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dial A Number"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_below="@id/btn_move_activity"
                android:id="@+id/btn_dial_number"/>
     <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/move_with_result"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_below="@id/btn_move_activity"
                android:id="@+id/btn_result_for_activity"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/result_from_activity"
                android:layout_below="@id/btn_move_activity"
                android:textColor="@color/kunyit"
                android:textSize="18sp"
                android:gravity="center"
                android:textStyle="bold"
                android:id="@+id/tv_result"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>